Gyro + move salle au lieu de gravity

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ Assets/FMOD/FMODStudioCache.asset
 Assets/FMOD/FMODStudioCache.asset.meta
 Library/
 Temp/
+Assets/iOS Project Builder/
+Assets/iOS Project Builder.meta
